# cesp

./: .gitignore  Makefile  build_copy.bat  build_venv.bat  cesp.py  copy_to_script_dir.bat  dev-requirements.txt  mypy.ini  pyproject.toml  readme.md  test_folder.7z
cesp_venv/: pyvenv.cfg
cesp_venv/Scripts/: Activate.ps1  activate  activate.bat  futurize-script.py  pasteurize-script.py  pyi-archive_viewer-script.py  pyi-bindepend-script.py  pyi-grab_version-script.py  pyi-makespec-script.py  pyi-set_version-script.py  pyinstaller-script.py
scripts/: create_test_folder.py  make_exe.py  variables.bat
tests/: test_cesp.py  test_folder.7z
